--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,10 +62,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\OptionsController.cs" />
     <Compile Include="Assets\Scripts\EndGameScreen.cs" />
+    <Compile Include="Assets\Scripts\WrongPlace.cs" />
     <Compile Include="Assets\Scripts\WallObsticable.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\PlayerMovment.cs" />
-    <Compile Include="Assets\WrongPlace.cs" />
     <Compile Include="Assets\Scripts\MouseLook.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Interactable.cs" />
